refactoring block with mulcher and change pravki

--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,8 @@
             </div>
             <menu class="headerNav">
                 <ul>
-                    <li><a href="#">Фронтальные мульчеры DAF</a></li>
                     <li><a href="#">Мульчеры для экскаватаров DAH</a></li>
+                    <li><a href="#">Фронтальные мульчеры DAF</a></li>
                     <li><a href="servis.html">Запчасти</a></li>
                     <li><a href="contact.html">Контакты</a></li>
                 </ul>
@@ -43,16 +43,16 @@
             <h1 class="contactTitle">Контакты</h1>
             <div class="contactBlockText">
                 <div class="contactHeader">
-                    Генеральное представительство Denis Cimaf на территории России:
+                    Генеральное представительство DENIS CIMAF на территории Росии:
                 </div>
-                <div class="contactBody">
-                    <p>214030, г. Смоленск, Краснинское шоссе, 14</p>
-                    <p><a href="#">+7 (4812) 248-000</a></p>
-                    <p><a href="#">sales@madrog.ru</a></p>
+                <div class="contactBody">   
+                    <p>Россия, Смоленская область, Смоленский район, деревня Кореневщина, Промышленная улица, 4.</p>
+                    <p>Тел:<a href="#">+7 (4812) 248-000</a></p>
+                    <p>Почта: <a href="#">sales@madrog.ru</a></p>
                 </div>
                 <div class="contactFooter">
                     <p>Единый номер по всей России:</p>
-                    <p><a href="#">8 800 505 5008</a> (звонок бесплатный).</p>
+                    <p><a href="#">8 800 505 50 08</a> (звонок бесплатный).</p>
                 </div>
             </div>
         </section>
