--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 <body>
     <header>
         <nav>
-            <div class="logo"><a href="index.html"><img srcset="img/logoInMob.svg 800w, img/logo.png 1000w" sizes="(max-width: 800px) 800px, 1000px" src="img/logo.png" alt="Логотип"></a></div>
+            <div class="logo"><a href="index.html"><img srcset="img/logoInMob.svg 800w, img/logo.png 1000w"
+                        sizes="(max-width: 800px) 800px, 1000px" src="img/logo.png" alt="Логотип"></a></div>
             <div class="headerSocial">
                 <div class="headerSocialBlock">
                     <div class="phoneBlock">
-                        <a href="#"><i class="far fa-mobile"></i> 8 (800) 505-58-12</a>
+                        <a href="#"><i class="far fa-mobile"></i> 8 800 505 50 08</a>
                     </div>
                     <div class="burgerMenuInMobVesion">
                         <i class="far fa-bars"></i>
@@ -35,8 +36,8 @@
             </div>
             <menu class="headerNav">
                 <ul>
-                    <li><a href="product.html">Фронтальные мульчеры DAF</a></li>
                     <li><a href="product.html">Мульчеры для экскаватаров DAH</a></li>
+                    <li><a href="product.html">Фронтальные мульчеры DAF</a></li>
                     <li><a href="servis.html">Запчасти</a></li>
                     <li><a href="contact.html">Контакты</a></li>
                 </ul>
@@ -75,7 +76,7 @@
             </a>
         </section>
         <section class="selectMonst">
-            <h1 class="monstTitle">Выбери своего монстра</h1>
+            <h1 class="monstTitle">Выбери свой мульчер</h1>
             <p class="monstSubTitle">Промышленные мульчеры Denis Cimaf созданы по передовой запатентованной технологии
                 измельчения древесины, обеспечивающей максимально высокую производительность за счет небольшой мощности.
                 Древесная растительность моментально превращается в щепу.</p>
@@ -83,29 +84,30 @@
                 <div class="mostrImg">
                     <div class="mostrBlockHover">
                         <div class="hoverContent">
-                            <h2 class="mostrBlockHoverTitle">Экскаваторные
-                                мульчеры DAH</h2>
-                            <a href="product.html"><div class="button"><span>Параметры</span><i class="far fa-chevron-right"></i></div></a>
+                            <h2 class="mostrBlockHoverTitle">Мульчеры для экскаваторов DAH-серия.</h2>
+                            <a href="product.html">
+                                <div class="button"><span>Параметры</span><i class="far fa-chevron-right"></i></div>
+                            </a>
                         </div>
                     </div>
-                    <img src="img/mostr1.png" alt="Мульчеры">
+                    <img class="imgShadow" src="img/screen1.jpg" alt="Мульчеры">
                 </div>
                 <div class="mostrImg">
                     <div class="mostrBlockHover">
                         <div class="hoverContent">
-                            <h2 class="mostrBlockHoverTitle">Фронтальные мульчеры DAF</h2>
+                            <h2 class="mostrBlockHoverTitle">Мульчеры ля фронтальных погрузчиков DAF-серия.</h2>
                             <a href="product.html"><div class="button"><span>Параметры</span><i class="far fa-chevron-right"></i></div></a>
                         </div>
                     </div>
-                    <img src="img/mostr2.png" alt="Мульчеры">
+                    <img src="img/screen2.jpg" alt="Мульчеры">
                 </div>
             </div>
         </section>
         <section class="social">
             <h2 class="socialTitle">Присоединяйся</h2>
             <div class="socialMainBlock">
-                <div class="youTube"><iframe src="https://www.youtube.com/embed/D5Rz9LyJoDQ"
-                        frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                <div class="youTube"><iframe src="https://www.youtube.com/embed/D5Rz9LyJoDQ" frameborder="0"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
                 <div class="instagramm"><img src="img/instg.jpg" alt=""></div>
